// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin get starter pack view getStarterPack() gets a starterpack by uri 1`] = `
Object {
  "starterPack": Object {
    "cid": "cids(0)",
    "creator": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": Array [
        Object {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        Object {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
    "feeds": Array [
      Object {
        "cid": "cids(3)",
        "creator": Object {
          "associated": Object {
            "activitySubscription": Object {
              "allowSubscriptions": "followers",
            },
          },
          "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "description": "its me!",
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": Array [
            Object {
              "cid": "cids(2)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "user(0)",
              "uri": "record(3)",
              "val": "self-label-a",
            },
            Object {
              "cid": "cids(2)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "user(0)",
              "uri": "record(3)",
              "val": "self-label-b",
            },
          ],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "did": "did:web:example.com",
        "displayName": "alice's feedgen",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "uri": "record(2)",
        "viewer": Object {},
      },
    ],
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "joinedAllTimeCount": 0,
    "joinedWeekCount": 0,
    "labels": Array [],
    "list": Object {
      "cid": "cids(4)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "listItemCount": 3,
      "name": "n/a",
      "purpose": "app.bsky.graph.defs#referencelist",
      "uri": "record(1)",
      "viewer": Object {
        "muted": false,
      },
    },
    "listItemsSample": Array [
      Object {
        "subject": Object {
          "associated": Object {
            "activitySubscription": Object {
              "allowSubscriptions": "followers",
            },
          },
          "did": "user(2)",
          "handle": "carol.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "uri": "record(4)",
      },
      Object {
        "subject": Object {
          "associated": Object {
            "activitySubscription": Object {
              "allowSubscriptions": "followers",
            },
          },
          "avatar": "https://bsky.public.url/img/avatar/plain/user(4)/cids(1)@jpeg",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "description": "hi im bob label_me",
          "did": "user(3)",
          "displayName": "bobby",
          "handle": "bob.test",
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "uri": "record(5)",
      },
      Object {
        "subject": Object {
          "associated": Object {
            "activitySubscription": Object {
              "allowSubscriptions": "followers",
            },
            "chat": Object {
              "allowIncoming": "none",
            },
          },
          "did": "user(5)",
          "handle": "dan.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "muted": false,
          },
        },
        "uri": "record(6)",
      },
    ],
    "record": Object {
      "$type": "app.bsky.graph.starterpack",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "feeds": Array [
        Object {
          "uri": "record(2)",
        },
      ],
      "list": "record(1)",
      "name": "alice's starter pack",
    },
    "uri": "record(0)",
  },
}
`;

exports[`admin get starter pack view getStarterPack() gets a starterpack while taken down 1`] = `
Object {
  "cid": "cids(0)",
  "creator": Object {
    "associated": Object {
      "activitySubscription": Object {
        "allowSubscriptions": "followers",
      },
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "did": "user(0)",
    "displayName": "ali",
    "handle": "alice.test",
    "labels": Array [
      Object {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(3)",
        "val": "self-label-a",
      },
      Object {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(3)",
        "val": "self-label-b",
      },
    ],
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
  "feeds": Array [
    Object {
      "cid": "cids(3)",
      "creator": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": Object {
          "blockedBy": false,
          "muted": false,
        },
      },
      "did": "did:web:example.com",
      "displayName": "alice's feedgen",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "likeCount": 0,
      "uri": "record(2)",
      "viewer": Object {},
    },
  ],
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "joinedAllTimeCount": 0,
  "joinedWeekCount": 0,
  "labels": Array [],
  "list": Object {
    "cid": "cids(4)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "listItemCount": 3,
    "name": "n/a",
    "purpose": "app.bsky.graph.defs#referencelist",
    "uri": "record(1)",
    "viewer": Object {
      "muted": false,
    },
  },
  "listItemsSample": Array [
    Object {
      "subject": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "did": "user(2)",
        "handle": "carol.test",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(6)",
          "following": "record(5)",
          "muted": false,
        },
      },
      "uri": "record(4)",
    },
    Object {
      "subject": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(4)/cids(1)@jpeg",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "hi im bob label_me",
        "did": "user(3)",
        "displayName": "bobby",
        "handle": "bob.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(9)",
          "following": "record(8)",
          "muted": false,
        },
      },
      "uri": "record(7)",
    },
    Object {
      "subject": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
          "chat": Object {
            "allowIncoming": "none",
          },
        },
        "did": "user(5)",
        "handle": "dan.test",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "following": "record(11)",
          "muted": false,
        },
      },
      "uri": "record(10)",
    },
  ],
  "record": Object {
    "$type": "app.bsky.graph.starterpack",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "feeds": Array [
      Object {
        "uri": "record(2)",
      },
    ],
    "list": "record(1)",
    "name": "alice's starter pack",
  },
  "uri": "record(0)",
}
`;

exports[`admin get starter pack view getStarterPack() gets a starterpack while taken down 2`] = `
Object {
  "cid": "cids(0)",
  "creator": Object {
    "associated": Object {
      "activitySubscription": Object {
        "allowSubscriptions": "followers",
      },
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "did": "user(0)",
    "displayName": "ali",
    "handle": "alice.test",
    "labels": Array [
      Object {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(3)",
        "val": "self-label-a",
      },
      Object {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(3)",
        "val": "self-label-b",
      },
    ],
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
  "feeds": Array [
    Object {
      "cid": "cids(3)",
      "creator": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": Object {
          "blockedBy": false,
          "muted": false,
        },
      },
      "did": "did:web:example.com",
      "displayName": "alice's feedgen",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "likeCount": 0,
      "uri": "record(2)",
      "viewer": Object {},
    },
  ],
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "joinedAllTimeCount": 0,
  "joinedWeekCount": 0,
  "labels": Array [
    Object {
      "cid": "cids(0)",
      "cts": "1970-01-01T00:00:00.000Z",
      "src": "user(2)",
      "uri": "record(0)",
      "val": "!takedown",
    },
  ],
  "list": Object {
    "cid": "cids(4)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "listItemCount": 3,
    "name": "n/a",
    "purpose": "app.bsky.graph.defs#referencelist",
    "uri": "record(1)",
    "viewer": Object {
      "muted": false,
    },
  },
  "listItemsSample": Array [
    Object {
      "subject": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "did": "user(3)",
        "handle": "carol.test",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "muted": false,
        },
      },
      "uri": "record(4)",
    },
    Object {
      "subject": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(5)/cids(1)@jpeg",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "hi im bob label_me",
        "did": "user(4)",
        "displayName": "bobby",
        "handle": "bob.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "muted": false,
        },
      },
      "uri": "record(5)",
    },
    Object {
      "subject": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
          "chat": Object {
            "allowIncoming": "none",
          },
        },
        "did": "user(6)",
        "handle": "dan.test",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "muted": false,
        },
      },
      "uri": "record(6)",
    },
  ],
  "record": Object {
    "$type": "app.bsky.graph.starterpack",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "feeds": Array [
      Object {
        "uri": "record(2)",
      },
    ],
    "list": "record(1)",
    "name": "alice's starter pack",
  },
  "uri": "record(0)",
}
`;
